# trpo-lab-1

./: .cproject  .project  CMakeLists.txt  functions.c  functions.h  functions2.h  functions3.h  functions4-1.h  functions4-2.h  functions5-1.h  functions5-2.h  main  main.c  main.cpp
.github/workflows/: main.yml
doc/: conf.py
doc/doctrees/: environment.pickle  index.doctree
doc/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/html/_sources/: index.rst.txt
inc/: classes.h
src/: main.cpp
test/: unit_test.cpp
